# Rotom

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  mcp_servers.yaml  pyproject.toml
src/main_agent/: __init__.py  agent.py  api.py  auth.py  config.py  conversations.py  history.py  main.py  mcp_registry.py  schemas.py
